# BasicShader

./: CMakeLists.txt  README.md  main.cpp  mainwindow.ui  shaderwidget.cpp  shaderwidget.h  simple.frag  simple.vert
